RESOLVED FIXED47096
[GTK] Interior scrollbars do not draw their background properly
https://bugs.webkit.org/show_bug.cgi?id=47096
Summary [GTK] Interior scrollbars do not draw their background properly
Martin Robinson
Reported 2010-10-04 11:17:41 PDT
This only manifests in a very few GTK+ themes -- I've only been able to reproduce it so far with the default GTK+ theme. The issue here is that the code that draws the scrolled window background behind the scrollbar is using gtk_paint_box instead of gtk_paint_shadow. The latter is the correct behavior, which can be observed in gtkscrolledwindow.c in the GTK+ sources.
Attachments
Patch for this issue (3.96 KB, patch)
2010-10-04 11:26 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-10-04 11:26:00 PDT
Created attachment 69649 [details] Patch for this issue
Xan Lopez
Comment 2 2010-10-04 20:31:03 PDT
Comment on attachment 69649 [details] Patch for this issue One day we'll get rid of GTK+ themes and the world will be a better place.
Martin Robinson
Comment 3 2010-10-04 20:51:19 PDT
Thanks for the review! For posterity, I should correct my previous statement to say that I can only reproduce this issue with the default Ubuntu 9.10 theme.
Martin Robinson
Comment 4 2010-10-05 10:03:21 PDT
Comment on attachment 69649 [details] Patch for this issue Clearing flags on attachment: 69649 Committed r69119: <http://trac.webkit.org/changeset/69119>
Martin Robinson
Comment 5 2010-10-05 10:03:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.